infra/core-infra/kubernetes/base/cron-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniz-cron-service
  labels:
    app: uniz-cron-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniz-cron-service
  template:
    metadata:
      labels:
        app: uniz-cron-service
    spec:
      containers:
        - name: cron-service
          image: uniz-cron-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3008
          resources:
            limits:
              cpu: "1000m"
              memory: "512Mi"
            requests:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: uniz-cron-service
spec:
  selector:
    app: uniz-cron-service
  ports:
    - protocol: TCP
      port: 3008
      targetPort: 3008
