infra/core-infra/kubernetes/base/files-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniz-files-service
  labels:
    app: uniz-files-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniz-files-service
  template:
    metadata:
      labels:
        app: uniz-files-service
    spec:
      containers:
        - name: files-service
          image: desusreecharan/uniz-files-service:latest
          ports:
            - containerPort: 3005
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: uniz-files-service
spec:
  selector:
    app: uniz-files-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
