infra/core-infra/kubernetes/base/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniz-notification-service
  labels:
    app: uniz-notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniz-notification-service
  template:
    metadata:
      labels:
        app: uniz-notification-service
    spec:
      containers:
        - name: notification-service
          image: uniz-notification-service:local
          imagePullPolicy: Never
          imagePullPolicy: Never
          ports:
            - containerPort: 3007
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: uniz-notification-service
spec:
  selector:
    app: uniz-notification-service
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 3007
