infra/core-infra/kubernetes/base/ornate-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ornate-core
  labels:
    app: ornate-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ornate-core
  template:
    metadata:
      labels:
        app: ornate-core
    spec:
      containers:
        - name: ornate-core
          image: ornate-core:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "10m"
              memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ornate-core
spec:
  selector:
    app: ornate-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
