infra/core-infra/kubernetes/base/ornate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ornate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ornate
  template:
    metadata:
      labels:
        app: ornate
    spec:
      containers:
        - name: ornate
          image: docker.io/library/ornate:local
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ornate
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ornate
