infra/core-infra/kubernetes/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniz-user-service
  labels:
    app: uniz-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniz-user-service
  template:
    metadata:
      labels:
        app: uniz-user-service
    spec:
      containers:
        - name: user-service
          image: desusreecharan/uniz-user-service:latest
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: uniz-user-service
spec:
  selector:
    app: uniz-user-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
