infra/core-infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uniz-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rguktong.in
        - uniz.rguktong.in
        - api.uniz.rguktong.in
        - ornate-ems.rguktong.in
      secretName: uniz-tls-cert
  rules:
    - host: rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uniz-portal
                port:
                  number: 80
    - host: uniz.rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uniz-portal
                port:
                  number: 80
    - host: api.uniz.rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uniz-gateway
                port:
                  number: 80
    - host: ornate-ems.rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ornate-ems
                port:
                  number: 80
