infra/core-infra/kubernetes/base/ornate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ornate-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ornate-core.rguktong.in
        - ornate.rguktong.in
      secretName: ornate-tls-cert
  rules:
    - host: ornate-core.rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ornate-core
                port:
                  number: 80
    - host: ornate.rguktong.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ornate
                port:
                  number: 80
